[metadata]
license_files = LICENSE

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Joachim Metz <joachim.metz@gmail.com>
doc_files = ACKNOWLEDGEMENTS
            AUTHORS
            LICENSE
            README
build_requires = python3-setuptools
requires = libbde-python3 >= 20220121
           libcreg-python3 >= 20200725
           libewf-python3 >= 20131210
           libfcrypto-python3 >= 20221229
           libfsapfs-python3 >= 20201107
           libfsext-python3 >= 20220112
           libfsfat-python3 >= 20220816
           libfshfs-python3 >= 20220115
           libfsntfs-python3 >= 20211229
           libfsxfs-python3 >= 20220113
           libfvde-python3 >= 20220121
           libfwnt-python3 >= 20210717
           libfwsi-python3 >= 20150606
           libluksde-python3 >= 20220121
           libmodi-python3 >= 20210405
           libphdi-python3 >= 20220110
           libqcow-python3 >= 20201213
           libregf-python3 >= 20201002
           libsigscan-python3 >= 20230109
           libsmdev-python3 >= 20140529
           libsmraw-python3 >= 20140612
           libvhdi-python3 >= 20201014
           libvmdk-python3 >= 20140421
           libvsgpt-python3 >= 20211115
           libvshadow-python3 >= 20160109
           libvslvm-python3 >= 20160109
           python3-acstore >= 20230101
           python3-artifacts >= 20220219
           python3-cffi >= 1.9.1
           python3-cryptography >= 2.0.2
           python3-dfdatetime >= 20221112
           python3-dfimagetools >= 20220129
           python3-dfvfs >= 20221224
           python3-dfwinreg >= 20211207
           python3-dtfabric >= 20220219
           python3-idna >= 2.5
           python3-pytsk3 >= 20210419
           python3-pyxattr >= 0.7.2
           python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1

