[metadata]
name = winregrc
version = 20240318
description = Windows Registry resources (winregrc)
long_description = winregrc is a Python module part of winreg-kb to allow reuse of Windows Registry resources.
long_description_content_type = text/plain
url = https://github.com/libyal/winreg-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  winregrc = winregrc
packages = find:
python_requires = >=3.8
scripts =
  scripts/appcompatcache.py
  scripts/application_identifiers.py
  scripts/cached_credentials.py
  scripts/catalog.py
  scripts/controlpanel_items.py
  scripts/delegatefolders.py
  scripts/environment_variables.py
  scripts/eventlog_providers.py
  scripts/knownfolders.py
  scripts/mounted_devices.py
  scripts/mru.py
  scripts/msie_zone_info.py
  scripts/profiles.py
  scripts/programscache.py
  scripts/sam.py
  scripts/services.py
  scripts/shellfolders.py
  scripts/srum_extensions.py
  scripts/sysinfo.py
  scripts/syskey.py
  scripts/task_cache.py
  scripts/time_zones.py
  scripts/type_libraries.py
  scripts/usbstor.py
  scripts/userassist.py

[options.package_data]
winregrc =
  *.yaml
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
